tests/paczka1/small_fuzzy/86957398.err
Error in line 3: S12 S12 ,9
Error in line 1: S12 S886 1,8
Error in line 6: S12 S12 18,8
Error in line 14: S12 S886 98,0
